--- a/TestUtil/TestUtil/TestUtil.ui
+++ b/TestUtil/TestUtil/TestUtil.ui
@@ -380,7 +380,7 @@
         </widget>
        </item>
        <item row="0" column="6">
-        <widget class="QPushButton" name="pushButton_8">
+        <widget class="QPushButton" name="pushButton_adb">
          <property name="minimumSize">
           <size>
            <width>0</width>
@@ -388,7 +388,7 @@
           </size>
          </property>
          <property name="text">
-          <string>待扩展</string>
+          <string>adb</string>
          </property>
         </widget>
        </item>
