--- a/TestUtil/TestUtil/QtADBClass.ui
+++ b/TestUtil/TestUtil/QtADBClass.ui
@@ -104,9 +104,14 @@
           </widget>
          </item>
          <item row="2" column="0">
-          <widget class="QPushButton" name="pushButton_refresh_3">
+          <widget class="QPushButton" name="pushButton_top_name">
+           <property name="font">
+            <font>
+             <pointsize>9</pointsize>
+            </font>
+           </property>
            <property name="text">
-            <string/>
+            <string>查看最上层activity名字</string>
            </property>
           </widget>
          </item>
@@ -118,37 +123,42 @@
           </widget>
          </item>
          <item row="1" column="2">
-          <widget class="QPushButton" name="pushButton_refresh_4">
+          <widget class="QPushButton" name="pushButton_screenshot">
            <property name="text">
-            <string/>
+            <string>截屏</string>
            </property>
           </widget>
          </item>
          <item row="1" column="1">
-          <widget class="QPushButton" name="pushButton_refresh_6">
+          <widget class="QPushButton" name="pushButton_applist">
+           <property name="font">
+            <font>
+             <pointsize>11</pointsize>
+            </font>
+           </property>
            <property name="text">
-            <string/>
+            <string>应用列表</string>
            </property>
           </widget>
          </item>
          <item row="0" column="2">
-          <widget class="QPushButton" name="pushButton_refresh_8">
+          <widget class="QPushButton" name="pushButton_uninstall">
            <property name="text">
-            <string/>
+            <string>卸载APP</string>
            </property>
           </widget>
          </item>
          <item row="0" column="1">
-          <widget class="QPushButton" name="pushButton_refresh_5">
+          <widget class="QPushButton" name="pushButton_install">
            <property name="text">
-            <string/>
+            <string>安装APP</string>
            </property>
           </widget>
          </item>
          <item row="1" column="0">
-          <widget class="QPushButton" name="pushButton_refresh_7">
+          <widget class="QPushButton" name="pushButton_wifi_adb">
            <property name="text">
-            <string/>
+            <string>无线ADB</string>
            </property>
           </widget>
          </item>
